tests/miniJava/neg/006799_mutation.MiniJava
class if { public static void Main ( String [ ] java ) { { } } }
